tests/paczka1/fuzzy1/16531641.err
Error in line 6: 3qHE S928 3`,2
Error in line 11: YjUT S928 87,9
Error in line 13: S928 S132 81,4
Error in line 24: 3edXO1 S132 27,57
Error in line 3: 3qHE S928 10,5
Error in line 9: 3edXO1 S928 11,3
Error in line 37: S928 A24N 17,6
